<resources>
    <string name="app_name">ProjAutonomiaAutomovel</string>
    <string name="sTitulo">Qual a Autonomia do veículo em metros?</string>
    <string name="sConsumoMedio">Consumo médio km/L</string>
    <string name="sQtdCombustivel">Quantidade de Combustível</string>
    <string name="sCalcular">Calcular</string>
    <string name="sAutonomia">O automovél irá percorrer</string>
</resources>