<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtnQtdCombustivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="47dp"
        android:ems="10"
        android:hint="@string/sConsumoMedio"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/txtnConsumoMedio"
        app:layout_constraintStart_toStartOf="@+id/txtsTitulo"
        app:layout_constraintTop_toBottomOf="@+id/txtsTitulo" />

    <EditText
        android:id="@+id/txtnConsumoMedio"
        android:layout_width="246dp"
        android:layout_height="0dp"
        android:layout_marginBottom="72dp"
        android:ems="10"
        android:hint="@string/sQtdCombustivel"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnQtdCombustivel" />

    <TextView
        android:id="@+id/txtsTitulo"
        android:layout_width="245dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="43dp"
        android:text="@string/sTitulo"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtnQtdCombustivel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtsAutonomia"
        android:layout_width="232dp"
        android:layout_height="0dp"
        android:layout_marginBottom="196dp"
        android:text="@string/sAutonomia"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="85dp"
        android:text="@string/sCalcular"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/txtsAutonomia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnConsumoMedio" />
</androidx.constraintlayout.widget.ConstraintLayout>